2006-07-12  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/TclInputStream.java (decodedNumBytes,
        getsObj, filterBytes, doReadChars, readChars,
        externalToUnicode):
        Reimplement input decoding so that bytes are decoded
        to chars in one pass. The previous implementation
        assumed that a decode operation could be done twice,
        but that is not possible in Java since the nio
        decoders provide no way to save decoder state.
        This new implementation will decode bytes into
        chars one char at a time while saving a map that
        is used later to determine how many bytes were
        decoded for a given range of characters. These
        chages fixes up support for stateful encodings
        like shiftjis.
        * tests/jacl/ioEncodeDecode.test: Add additional
        test cases for input decoding issues.

2006-07-11  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/FileChannel.java (open):
        Truncate file after opening using new
        Java nio channels package.
        * src/jacl/tcl/lang/OpenCmd.java: Pass
        TclIO.TRUNC instead of attempting to delete
        the file. A file delete does not work when
        another file descriptor to the same file is open.
        * tests/tcl/io.test: Add file truncate test.

2006-07-08  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/TclInputStream.java (getsObj,
        filterBytes, peekAhead):
        Add debug output to gets method. Avoid looking
        at the next buffer when EOF char has been found.
        Cleanup code by removing C porting comments.
        Double check that the copiedTotal return value
        from getsObj matches the length of the TclObject.
        * tests/jacl/ioEncodeDecode.test: Mark some
        tests as knownbug since the tests don't pass.
        Add some tests that comparing conversion of
        shiftjis with utf-8.